Maquetación inicial del sitio web en index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
+    <section>
+        <header>
+            <h1>Ciudades</h1>
+        </header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Opción 1</a>
+                </li>
+                <li>
+                    <a href="#">Opción 2</a>
+                </li>
+                <li>
+                    <a href="#">Opción 3</a>
+                </li>
+                <li>
+                    <a href="#">Opción 4</a>
+                </li>
+            </ul>
+        </nav>
+        <article>
+            <h2>LONDRES</h2>
+            <p>Al igual que en todo el Reino Unido, el idioma oficial en Londres es el inglés. Conoce algunas expresiones útiles que pueden ayudarte durante el viaje</p>
+            <p>Cuando se trata de viajar a Londres, la temporada más económica para visitar la capital británica es entre noviembre y marzo, conocida como la temporada baja. En esta época del año, los precios de los vuelos y los alojamientos son más bajos que en los meses de temporada alta, generalmente entre mayo y octubre</p>
+        </article>
+        <footer>
+            <p>Sitio web 2023</p>
+        </footer>
+    </section>
     
 </body>
 </html>
