configuración del css para el uso del display flex

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-    <section>
+    <section class="paginaPrincipal">
         <header>
-            <h1>Ciudades</h1>
+            <h1 class="colorwhite">Ciudades</h1>
         </header>
         <nav>
             <ul>
@@ -32,8 +32,9 @@
             <p>Cuando se trata de viajar a Londres, la temporada más económica para visitar la capital británica es entre noviembre y marzo, conocida como la temporada baja. En esta época del año, los precios de los vuelos y los alojamientos son más bajos que en los meses de temporada alta, generalmente entre mayo y octubre</p>
         </article>
         <footer>
-            <p>Sitio web 2023</p>
+            <p>Sitio web 2023</p> 
         </footer>
+        
     </section>
     
 </body>
